# madlib-cli

./: README.md  pyproject.toml
assets/: Game.txt  Game_result.text
madlib_cli/: madlib.py
tests/: test_madlib_cli.py
